# flash-bidirectional-linear-attention

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
benchmarks/ops/: benchmark_linear_attn.py
fbi_la/: utils.py
fbi_la/layers/: __init__.py  focused_la.py  linfusion.py  mlla.py  polaformer.py
fbi_la/layers/focused_la/: attention.py
fbi_la/layers/linfusion/: attention.py
fbi_la/layers/mlla/: attention.py
fbi_la/models/: __init__.py
fbi_la/models/linfusion/: __init__.py  linfusion.py  modeling_linfusion.py
fbi_la/ops/linear_attn/: README.md  attention copy 3.py  attention copy.py  attention.py  naive.py  softmax_attn.py
fbi_la/ops/relu_attn/: README.md  attention.py  naive.py
fbi_la/ops/simple_la/: attention.py  naive.py
