[project]
name = "fbi-la"
version = "0.1.0"
authors = [{ name = "Haopeng Li" }]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.3",
    "packaging>=25.0",
    "torch>=2.5.0",
    "triton>=3.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fbi_la*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["matplotlib>=3.10.5", "pandas>=2.3.1"]

[tool.uv.build-backend]
module-name = "fbi_la"
module-root = ""
